--- a/index.html
+++ b/index.html
@@ -1,12 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer-gear</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800;900&family=Work+Sans:wght@400;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/7fd1922fc5.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h2 class="nav-title">Influencer Products</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log in</a></li>
+                <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+        </nav>
+        <!-- banner section -->
+        <section class="banner-container">
+            <div class="banner-content">
+                <h1 class="banner-title">Start your Journey as Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, deserunt.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.?</p>
+                <button class="btn-primary">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-img-container">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- sponsor section -->
+        <section>
+            <div class="sponsor-img-container">
+                <img src="./logos/Alibaba.svg" alt="">
+                <img src="./logos/Amazon.svg" alt="">
+                <img src="./logos/Daraz.pk Logo.svg" alt="">
+                <img src="./logos/Ebay.svg" alt="">
+                <img src="./logos/Rakuten.svg" alt="">
+                <img src="./logos/Walmart.svg" alt="">
+                <img src="./logos/Target.svg" alt="">
+            </div>
+        </section>
+        <!-- popular collection -->
+        <section>
+            <h3 class="popular-title" >Popular Collection</h3>
+            <div class="popular-container" >
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Flex Tripod</p>
+                    <p class="product-price">$50.48</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Microphone</p>
+                    <p class="product-price">$120.28</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Airbuds</p>
+                    <p class="product-price">$110.00</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Drone</p>
+                    <p class="product-price">$980.82</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Light Setup</p>
+                    <p class="product-price">$1200.00</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Photoshoot Set</p>
+                    <p class="product-price">$820.40</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Vlogging camera</p>
+                    <p class="product-price">$1800.80</p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Green Screen</p>
+                    <p class="product-price"></p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+                <div class="Product-container">
+                    <img src="" alt="">
+                    <p class="product-title">Action Camera</p>
+                    <p class="product-price"></p>
+                    <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
+                </div>
+
+            </div>
+        </section>
+
+    </main>
+    <footer></footer>
+
 </body>
+
 </html>
