popular collection section done

--- a/index.html
+++ b/index.html
@@ -54,61 +54,61 @@
             </div>
         </section>
         <!-- popular collection -->
-        <section>
+        <section class="popular-collection">
             <h3 class="popular-title" >Popular Collection</h3>
-            <div class="popular-container" >
+            <div class="popular-collection-container" >
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/tripod.png" alt="">
                     <p class="product-title">Flex Tripod</p>
                     <p class="product-price">$50.48</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/mic.png" alt="">
                     <p class="product-title">Microphone</p>
                     <p class="product-price">$120.28</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/airpod.png" alt="">
                     <p class="product-title">Airbuds</p>
                     <p class="product-price">$110.00</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/drone.png" alt="">
                     <p class="product-title">Drone</p>
                     <p class="product-price">$980.82</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/lights.png" alt="">
                     <p class="product-title">Light Setup</p>
                     <p class="product-price">$1200.00</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/setup.png" alt="">
                     <p class="product-title">Photoshoot Set</p>
                     <p class="product-price">$820.40</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/camera.png" alt="">
                     <p class="product-title">Vlogging camera</p>
                     <p class="product-price">$1800.80</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/single-light.png" alt="">
                     <p class="product-title">Green Screen</p>
-                    <p class="product-price"></p>
+                    <p class="product-price">$25.00</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
                 <div class="Product-container">
-                    <img src="" alt="">
+                    <img src="./images/action.png" alt="">
                     <p class="product-title">Action Camera</p>
-                    <p class="product-price"></p>
+                    <p class="product-price">$380.00</p>
                     <p class="product-description">Worldwide shifting <br>available <br>Buyers protection available</p>
                 </div>
 
